--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
     margin:0px;
+    height: 100vh;
 }
 
 #container {
     display: flex;
     flex-wrap: wrap;
-    height: 95vh;
+    height: 600px;
+    width: 600px ;
 }
 
 #top-section {
@@ -16,6 +18,15 @@ body {
     justify-content: center;
 }
 
+#bottom-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 95vh;
+}
+
 button {
     height: 50%;
+    margin-top: 50px;
 }
